--- a/broker/pom.xml
+++ b/broker/pom.xml
@@ -3,11 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-<!--    <parent>-->
-<!--        <groupId>com.zhb</groupId>-->
-<!--        <artifactId>studymq</artifactId>-->
-<!--        <version>1.0</version>-->
-<!--    </parent>-->
     <parent>
         <groupId>com.zhb</groupId>
         <artifactId>studymq</artifactId>
@@ -16,4 +11,7 @@
     <artifactId>broker</artifactId>
 
     <description>mq服务端的核心代码内容,消息原始数据存储,消息的索引文件存储,mmap等非常多的内容</description>
+    <dependencies>
+
+    </dependencies>
 </project>
